Adds random background image

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <title>Mehul Pillai</title>
     <script type="text/javascript" defer src="scripts/timeDate.js"></script>
     <script type="text/javascript" defer src="scripts/inspireQuote.js"></script>
+    <script type="text/javascript" defer src="scripts/backImage.js"></script>
     <script type="text/javascript">
         window.onload = () => {
             getDateTime()
             getQuote()
+            getImages()
         }
     </script>
 </head>
