--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <script type="text/javascript" defer src="scripts/backImage.js"></script>
     <script type="text/javascript">
         window.onload = () => {
-            getDateTime()
+            getDate()
+            getTime()
             getQuote()
             getImages()
         }
