--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" defer src="scripts/timeDate.js"></script>
     <script type="text/javascript" defer src="scripts/inspireQuote.js"></script>
     <script type="text/javascript" defer src="scripts/backImage.js"></script>
+    <script type="text/javascript" src="scripts/search.js"></script>
     <script type="text/javascript">
         window.onload = () => {
             getDate()
@@ -22,12 +23,20 @@
 
 <body>
     <br>
-    <h1 id="quote" align="center" onload="getQuote()">Hello World</h1>
-    <h2 id="author" align="center">Pretty Epic</h2>
-    <br><br><br>
-    <h1 id="date" align="center" onload="getDateTime()">DATE</h1>
-    <h1 id="time" align="center">TIME</h1>
-    <h2 id="state" align="center">GOOD</h2>
+    <div id="dateStuff" align="center">
+        <h1 id="date" align="center" class="mainPage">DATE</h1>
+        <h2 id="time" align="center" class="mainPage">TIME</h2>
+        <h3 id="state" align="center" class="mainPage">GOOD</h3>
+    </div>
+    <br><br><br><br>
+    <div class="searchDiv">
+        <input type="search" id="searchBar" align="center" placeholder="Search..." onkeypress="performSearch(event)" />
+    </div>
+    <br><br><br><br><br>
+    <div id="quoteStuff" align="center">
+        <h3 id="quote" align="center" class="mainPage">Hello World</h3>
+        <h4 id="author" align="center" class="mainPage">Pretty Epic</h4>
+    </div>
 </body>
 
 </html>
