--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" href="/styles/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,26 +22,27 @@
 </head>
 
 <body>
-    <br>
-    <div id="dateStuff" align="bottom">
-        <h1 id="date" align="center" class="mainPage">DATE</h1>
-        <h2 id="time" align="center" class="mainPage">TIME</h2>
-        <h3 id="state" align="center" class="mainPage">GOOD</h3>
+    <div id="wrapper">
+        <br>
+        <div id="dateStuff" align="bottom">
+            <h1 id="date" align="center" class="mainPage">DATE</h1>
+            <h2 id="time" align="center" class="mainPage">TIME</h2>
+            <h3 id="state" align="center" class="mainPage">GOOD</h3>
+        </div>
+        <br><br><br><br>
+        <div class="searchDiv">
+            <input type="search" id="searchBar" align="center" placeholder="Search..." onkeypress="performSearch(event)" />
+        </div>
+        <br><br><br><br><br>
+        <div id="quoteStuff" align="center">
+            <h3 id="quote" align="center" class="mainPage">Hello World</h3>
+            <h4 id="author" align="center" class="mainPage">Pretty Epic</h4>
+        </div>
+        <br><br><br><br><br>
+        <center>
+            <a href="#" class="myButton" align="center">about</a>
+        </center>
     </div>
-    <br><br><br><br>
-    <div class="searchDiv">
-        <input type="search" id="searchBar" align="center" placeholder="Search..." onkeypress="performSearch(event)" onfocus="document.body.style.backdropFilter = 'blur(10px)'" onblur="document.body.style.backdropFilter = 'blur(0px)'" />
-    </div>
-    <br><br><br><br><br>
-    <div id="quoteStuff" align="center">
-        <h3 id="quote" align="center" class="mainPage">Hello World</h3>
-        <h4 id="author" align="center" class="mainPage">Pretty Epic</h4>
-    </div>
-    <br><br><br><br>
-    <center>
-        <a href="#" class="myButton" align="center">about</a>
-    </center>
-    <br><br><br>
 </body>
 
 </html>
