--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         />
         <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <script src="https://kit.fontawesome.com/aa3aeafa8a.js" crossorigin="anonymous"></script>
+
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
         <style>
             body,
