--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,14 @@
             crossorigin="anonymous"
         />
         <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <link rel="icon" href="%PUBLIC_URL%/favico.ico" />
         <script src="https://kit.fontawesome.com/aa3aeafa8a.js" crossorigin="anonymous"></script>
 
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
-        <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+HK&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet" />
 
         <style>
             body,
@@ -36,10 +37,10 @@
                 margin: 0;
             }
         </style>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Personal website of an aspiring computer scientist" />
-        <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+        <meta name="description" content="Personal website of Mehul Pillai" />
+        <link rel="apple-touch-icon" href="%PUBLIC_URL%/android-chrome-192x192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Mehul Pillai</title>
     </head>
